--- a/play_cluster_people copy.ipynb
+++ b/play_cluster_people copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,17 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pics,names = gen_all_pic_labels('./lfw_funneled/')\n",
-    "df = pd.DataFrame({'files':pics,'name':names})"
+    "pics,names,genders = gen_all_pic_labels('./lfw_funneled/')\n",
+    "#prepare gender\n",
+    "df = pd.DataFrame({'files':pics,'name':names,'gender':genders})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +64,7 @@
        "Name: name, Length: 5749, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,14 +109,15 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 9165 entries, 8 to 13231\n",
-      "Data columns (total 2 columns):\n",
+      "Int64Index: 9164 entries, 8 to 13230\n",
+      "Data columns (total 3 columns):\n",
       " #   Column  Non-Null Count  Dtype \n",
       "---  ------  --------------  ----- \n",
-      " 0   files   9165 non-null   object\n",
-      " 1   name    9165 non-null   object\n",
-      "dtypes: object(2)\n",
-      "memory usage: 214.8+ KB\n"
+      " 0   files   9164 non-null   object\n",
+      " 1   name    9164 non-null   object\n",
+      " 2   gender  9164 non-null   object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 286.4+ KB\n"
      ]
     }
    ],
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +148,7 @@
        "Name: name, Length: 1680, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -213,111 +215,123 @@
        "      <th>index</th>\n",
        "      <th>files</th>\n",
        "      <th>name</th>\n",
+       "      <th>gender</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>13053</td>\n",
-       "      <td>./lfw_funneled/John_Ashcroft/John_Ashcroft_004...</td>\n",
-       "      <td>John_Ashcroft</td>\n",
+       "      <td>371</td>\n",
+       "      <td>./lfw_funneled/Justin_Leonard/Justin_Leonard_0...</td>\n",
+       "      <td>Justin_Leonard</td>\n",
+       "      <td>male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>6916</td>\n",
-       "      <td>./lfw_funneled/Alan_Greenspan/Alan_Greenspan_0...</td>\n",
-       "      <td>Alan_Greenspan</td>\n",
+       "      <td>11890</td>\n",
+       "      <td>./lfw_funneled/Doris_Schroeder/Doris_Schroeder...</td>\n",
+       "      <td>Doris_Schroeder</td>\n",
+       "      <td>female</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7655</td>\n",
-       "      <td>./lfw_funneled/Colin_Powell/Colin_Powell_0087.jpg</td>\n",
-       "      <td>Colin_Powell</td>\n",
+       "      <td>1936</td>\n",
+       "      <td>./lfw_funneled/Mahmoud_Abbas/Mahmoud_Abbas_000...</td>\n",
+       "      <td>Mahmoud_Abbas</td>\n",
+       "      <td>male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>357</td>\n",
-       "      <td>./lfw_funneled/Jennifer_Aniston/Jennifer_Anist...</td>\n",
-       "      <td>Jennifer_Aniston</td>\n",
+       "      <td>4960</td>\n",
+       "      <td>./lfw_funneled/Patrick_Roy/Patrick_Roy_0001.jpg</td>\n",
+       "      <td>Patrick_Roy</td>\n",
+       "      <td>male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2516</td>\n",
-       "      <td>./lfw_funneled/Carson_Palmer/Carson_Palmer_000...</td>\n",
-       "      <td>Carson_Palmer</td>\n",
+       "      <td>5860</td>\n",
+       "      <td>./lfw_funneled/Jodie_Foster/Jodie_Foster_0002.jpg</td>\n",
+       "      <td>Jodie_Foster</td>\n",
+       "      <td>female</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>995</th>\n",
-       "      <td>5638</td>\n",
-       "      <td>./lfw_funneled/Pierce_Brosnan/Pierce_Brosnan_0...</td>\n",
-       "      <td>Pierce_Brosnan</td>\n",
+       "      <td>12956</td>\n",
+       "      <td>./lfw_funneled/Leonid_Kuchma/Leonid_Kuchma_000...</td>\n",
+       "      <td>Leonid_Kuchma</td>\n",
+       "      <td>male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
-       "      <td>5079</td>\n",
-       "      <td>./lfw_funneled/Ruth_Dreifuss/Ruth_Dreifuss_000...</td>\n",
-       "      <td>Ruth_Dreifuss</td>\n",
+       "      <td>5482</td>\n",
+       "      <td>./lfw_funneled/Robert_Blake/Robert_Blake_0006.jpg</td>\n",
+       "      <td>Robert_Blake</td>\n",
+       "      <td>male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
-       "      <td>8464</td>\n",
-       "      <td>./lfw_funneled/Alastair_Campbell/Alastair_Camp...</td>\n",
-       "      <td>Alastair_Campbell</td>\n",
+       "      <td>4059</td>\n",
+       "      <td>./lfw_funneled/Nestor_Kirchner/Nestor_Kirchner...</td>\n",
+       "      <td>Nestor_Kirchner</td>\n",
+       "      <td>male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
-       "      <td>7580</td>\n",
-       "      <td>./lfw_funneled/Colin_Powell/Colin_Powell_0024.jpg</td>\n",
-       "      <td>Colin_Powell</td>\n",
+       "      <td>6738</td>\n",
+       "      <td>./lfw_funneled/Al_Sharpton/Al_Sharpton_0005.jpg</td>\n",
+       "      <td>Al_Sharpton</td>\n",
+       "      <td>male</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
-       "      <td>11141</td>\n",
-       "      <td>./lfw_funneled/George_W_Bush/George_W_Bush_003...</td>\n",
-       "      <td>George_W_Bush</td>\n",
+       "      <td>6066</td>\n",
+       "      <td>./lfw_funneled/Jean_Chretien/Jean_Chretien_004...</td>\n",
+       "      <td>Jean_Chretien</td>\n",
+       "      <td>male</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1000 rows × 3 columns</p>\n",
+       "<p>1000 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     index                                              files  \\\n",
-       "0    13053  ./lfw_funneled/John_Ashcroft/John_Ashcroft_004...   \n",
-       "1     6916  ./lfw_funneled/Alan_Greenspan/Alan_Greenspan_0...   \n",
-       "2     7655  ./lfw_funneled/Colin_Powell/Colin_Powell_0087.jpg   \n",
-       "3      357  ./lfw_funneled/Jennifer_Aniston/Jennifer_Anist...   \n",
-       "4     2516  ./lfw_funneled/Carson_Palmer/Carson_Palmer_000...   \n",
+       "0      371  ./lfw_funneled/Justin_Leonard/Justin_Leonard_0...   \n",
+       "1    11890  ./lfw_funneled/Doris_Schroeder/Doris_Schroeder...   \n",
+       "2     1936  ./lfw_funneled/Mahmoud_Abbas/Mahmoud_Abbas_000...   \n",
+       "3     4960    ./lfw_funneled/Patrick_Roy/Patrick_Roy_0001.jpg   \n",
+       "4     5860  ./lfw_funneled/Jodie_Foster/Jodie_Foster_0002.jpg   \n",
        "..     ...                                                ...   \n",
-       "995   5638  ./lfw_funneled/Pierce_Brosnan/Pierce_Brosnan_0...   \n",
-       "996   5079  ./lfw_funneled/Ruth_Dreifuss/Ruth_Dreifuss_000...   \n",
-       "997   8464  ./lfw_funneled/Alastair_Campbell/Alastair_Camp...   \n",
-       "998   7580  ./lfw_funneled/Colin_Powell/Colin_Powell_0024.jpg   \n",
-       "999  11141  ./lfw_funneled/George_W_Bush/George_W_Bush_003...   \n",
+       "995  12956  ./lfw_funneled/Leonid_Kuchma/Leonid_Kuchma_000...   \n",
+       "996   5482  ./lfw_funneled/Robert_Blake/Robert_Blake_0006.jpg   \n",
+       "997   4059  ./lfw_funneled/Nestor_Kirchner/Nestor_Kirchner...   \n",
+       "998   6738    ./lfw_funneled/Al_Sharpton/Al_Sharpton_0005.jpg   \n",
+       "999   6066  ./lfw_funneled/Jean_Chretien/Jean_Chretien_004...   \n",
        "\n",
-       "                  name  \n",
-       "0        John_Ashcroft  \n",
-       "1       Alan_Greenspan  \n",
-       "2         Colin_Powell  \n",
-       "3     Jennifer_Aniston  \n",
-       "4        Carson_Palmer  \n",
-       "..                 ...  \n",
-       "995     Pierce_Brosnan  \n",
-       "996      Ruth_Dreifuss  \n",
-       "997  Alastair_Campbell  \n",
-       "998       Colin_Powell  \n",
-       "999      George_W_Bush  \n",
+       "                name  gender  \n",
+       "0     Justin_Leonard    male  \n",
+       "1    Doris_Schroeder  female  \n",
+       "2      Mahmoud_Abbas    male  \n",
+       "3        Patrick_Roy    male  \n",
+       "4       Jodie_Foster  female  \n",
+       "..               ...     ...  \n",
+       "995    Leonid_Kuchma    male  \n",
+       "996     Robert_Blake    male  \n",
+       "997  Nestor_Kirchner    male  \n",
+       "998      Al_Sharpton    male  \n",
+       "999    Jean_Chretien    male  \n",
        "\n",
-       "[1000 rows x 3 columns]"
+       "[1000 rows x 4 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
